bug fix and new feature